Closed Bug 1137054 Opened 10 years ago Closed 10 years ago

fix mailnews bustage due to changes from bug 1136388

Categories

(MailNews Core :: Backend, defect)

defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 39.0

People

(Reporter: ewong, Assigned: ewong)

References

Details

(Keywords: dogfood, regression)

Attachments

(1 file, 2 obsolete files)

Seeing this on trunk: ../../../../mailnews/base/src/MailNewsDLF.cpp:31:1: error: prototype for ‘nsresult mozilla::mailnews::MailNewsDLF::CreateInstance(const char*, nsIChannel*, nsILoadGroup*, const char*, nsIDocShell*, nsISupports*, nsIStreamListener**, nsIContentViewer**)’ does not match any in class ‘mozilla::mailnews::MailNewsDLF’ In file included from ../../../../mailnews/base/src/MailNewsDLF.cpp:7:0: ../../../../mailnews/base/src/MailNewsDLF.h:27:20: error: candidate is: virtual nsresult mozilla::mailnews::MailNewsDLF::CreateInstance(const char*, nsIChannel*, nsILoadGroup*, const nsACString_internal&, nsIDocShell*, nsISupports*, nsIStreamListener**, nsIContentViewer**) make[4]: *** [MailNewsDLF.o] Error 1 make[4]: Leaving directory `/builds/slave/c-cen-t-lnx/build/objdir/mailnews/base/src' make[3]: *** [mailnews/base/src/target] Error 2 make[3]: *** Waiting for unfinished jobs.... /usr/bin/ccache /tools/gcc-4.7.3-0moz1/bin/g++ -o mimemmix.o -c -I../../../dist/stl_wrappers -I../../../dist/system_wrappers -include /builds/slave/c-cen-t-lnx/build/mozilla/config/gcc_hidden.h -DENABLE_SMIME -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DMOZ_GLUE_IN_PROGRAM -DAB_CD=en-US -DNO_NSPR_10_SUPPORT -I/builds/slave/c-cen-t-lnx/build/mailnews/mime/src -I. -I/builds/slave/c-cen-t-lnx/build/mozilla/security/certverifier -I/builds/slave/c-cen-t-lnx/build/mozilla/security/manager/ssl/src -I/builds/slave/c-cen-t-lnx/build/mozilla/security/pkix/include -I../../../dist/include -I/builds/slave/c-cen-t-lnx/build/objdir/dist/include/nspr -I/builds/slave/c-cen-t-lnx/build/objdir/dist/include/nss -fPIC -DMOZILLA_CLIENT -include ../../../mozilla-config.h -MD -MP -MF .deps/mimemmix.o.pp -Wall -Wempty-body -Woverloaded-virtual -Wsign-compare -Wwrite-strings -Wno-invalid-offsetof -Wcast-align -gdwarf-2 -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -std=gnu++0x -pthread -pipe -DNDEBUG -DTRIMMED -gdwarf-2 -freorder-blocks -Os -fno-omit-frame-pointer /builds/slave/c-cen-t-lnx/build/mailnews/mime/src/mimemmix.cpp mimemoz2.o ccache ... /builds/slave/c-cen-t-lnx/build/mozilla/intl/icu/source/common/unistr_case_locale.cpp ../../../../mailnews/compose/src/nsURLFetcher.cpp:113:1: error: prototype for ‘nsresult nsURLFetcher::DoContent(const char*, bool, nsIRequest*, nsIStreamListener**, bool*)’ does not match any in class ‘nsURLFetcher’ In file included from ../../../../mailnews/compose/src/nsURLFetcher.cpp:6:0: ../../../../mailnews/compose/src/nsURLFetcher.h:48:91: error: candidate is: virtual nsresult nsURLFetcher::DoContent(const nsACString_internal&, bool, nsIRequest*, nsIStreamListener**, bool*) make[4]: *** [nsURLFetcher.o] Error 1 make[4]: Leaving directory `/builds/slave/c-cen-t-lnx/build/objdir/mailnews/compose/src' make[3]: *** [mailnews/compose/src/target] Error 2 I'm thinking it's mailnews core but TB trunk isn't busted, so I'm sticking it in SM:Mailnews.
(In reply to Edmund Wong (:ewong) from comment #1) > This is resulting from > http://hg.mozilla.org/mozilla-central/rev/1641a146787f (bug 1129795). Wrong cset. Wrong bug. http://hg.mozilla.org/mozilla-central/rev/d6e3bc0ea63f from bug 1136388
Component: MailNews: Backend → Backend
Product: SeaMonkey → MailNews Core
Version: SeaMonkey 2.36 Branch → 36
Summary: error: prototype for ‘nsresult mozilla::mailnews::MailNewsDLF::CreateInstance(const char*, nsIChannel*, nsILoadGroup*, const char*, nsIDocShell*, nsISupports*, nsIStreamListener**, nsIContentViewer**)’ does not match any in class ‘mozilla::mailnews: → fix bustage due to changes from bug 1136388
Attached patch proposed patch (v1) (obsolete) — Splinter Review
Assignee: nobody → ewong
Status: NEW → ASSIGNED
Attachment #8569635 - Flags: review?(rkent)
Comment on attachment 8569635 [details] [diff] [review] proposed patch (v1) Review of attachment 8569635 [details] [diff] [review]: ----------------------------------------------------------------- Compiles OK, but please use PromiseFlatCString ::: mailnews/base/src/MailNewsDLF.cpp @@ +42,2 @@ > > + bool viewSource = (PL_strstr(tmpContentType.get(),"view-source") != 0); Rather than adding the tmpContentType string, instead do: bool viewSource = (PL_strstr(PromiseFlatCString(aContentType).get() etc. ::: mailnews/base/src/nsMsgWindow.cpp @@ +374,5 @@ > nsIRequest *request, nsIStreamListener **aContentHandler, bool *aAbortProcess) > { > + nsCString tmpContentType(aContentType); > + > + if (tmpContentType.get()) Again, no need for tmpContentType. I'm not sure what the original if (aContentType) was looking for, but the closest cstring equivalent would be: if (!aContentType.IsEmpty()) ::: mailnews/compose/src/nsURLFetcher.cpp @@ +125,5 @@ > > /* > Check the content-type to see if we need to insert a converter > */ > + if (PL_strcasecmp(tmpContentType.get(), UNKNOWN_CONTENT_TYPE) == 0 || Same issue, replace the tmpContentType.get() with PromiseFlatCString(aContentType).get()
Attachment #8569635 - Flags: review?(rkent) → review-
Attached patch proposed patch (v2) (obsolete) — Splinter Review
Attachment #8569635 - Attachment is obsolete: true
Attachment #8569686 - Flags: review?(rkent)
Comment on attachment 8569686 [details] [diff] [review] proposed patch (v2) Review of attachment 8569686 [details] [diff] [review]: ----------------------------------------------------------------- r+=me with nits fixed ::: mailnews/base/src/MailNewsDLF.cpp @@ +30,5 @@ > NS_IMETHODIMP > MailNewsDLF::CreateInstance(const char* aCommand, > nsIChannel* aChannel, > nsILoadGroup* aLoadGroup, > + const nsACString& aContentType, Nit: whitespace @@ +38,5 @@ > nsIContentViewer** aDocViewer) > { > nsresult rv; > > + bool viewSource = (PL_strstr(PromiseFlatCString(aContentType).get(),"view-source") != 0); Nit: this code is too long, break into two lines. Also, space after the comma of: , "view
Attachment #8569686 - Flags: review?(rkent) → review+
fixed nits.
Attachment #8569686 - Attachment is obsolete: true
Attachment #8569698 - Flags: review+
Comment on attachment 8569698 [details] [diff] [review] proposed patch (v3) (for checkin) Pushed to comm-central: https://hg.mozilla.org/comm-central/rev/d4d00354095f
Looks fixed.
Blocks: 1136388
Severity: normal → blocker
Keywords: dogfood, regression
OS: Windows 8.1 → All
Hardware: x86_64 → All
Summary: fix bustage due to changes from bug 1136388 → fix mailnews bustage due to changes from bug 1136388
Target Milestone: --- → Thunderbird 39.0
Sorry I forgot to check comm-central. :(
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: