Bug 1137054 - Change MIME types as XPCOM string and not char*. r=rkent